<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <data>
        <variable
            name="viewModel"
            type="com.kalacheng.login.viewmodel.ChangePasswordModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@color/white"
            android:paddingTop="19dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/titleView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="45dp"
                    android:layout_marginRight="45dp"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@{viewModel.title}"/>

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:onClick="backClick"
                    android:padding="9dp"
                    android:src="@mipmap/icon_back"
                    android:tint="@color/textColor" />


            </RelativeLayout>
        </FrameLayout>
        <View style="@style/line2" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/modify_pwd_old"
                android:textColor="@color/textColor3"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_old"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="80dp"
                android:background="@null"
                android:hint="@string/modify_pwd_old_1"
                android:inputType="textPassword"
                android:textColor="@color/textColor3"
                android:textColorHint="@color/textColorC"
                android:textSize="16sp"
                android:text="@={viewModel.oldpassword}"/>

        </RelativeLayout>

        <View style="@style/line2" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/modify_pwd_new"
                android:textColor="@color/textColor3"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_new"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="80dp"
                android:background="@null"
                android:hint="@string/modify_pwd_new_1"
                android:inputType="textPassword"
                android:textColor="@color/textColor3"
                android:textColorHint="@color/textColorC"
                android:textSize="16sp"
                android:text="@={viewModel.newpassword}"/>

        </RelativeLayout>

        <View style="@style/line2" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/modify_pwd_confirm"
                android:textColor="@color/textColor3"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="80dp"
                android:background="@null"
                android:hint="@string/modify_pwd_confirm_1"
                android:inputType="textPassword"
                android:textColor="@color/textColor3"
                android:textColorHint="@color/textColorC"
                android:textSize="16sp"
                android:text="@={viewModel.newpasswordconfirm}"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/modify_pwd_btn"
            android:gravity="center"
            android:text="@string/modify_pwd_confirm_2"
            android:textColor="@color/white"
            android:onClick="@{()->viewModel.onClick()}"
            android:textSize="17sp" />
    </LinearLayout>
</layout>
